# codebase

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  sonar-project.properties
.agent/: project-context.yaml
.agent/commands/: setup-ai-first.md
.agent/hooks/: data-guard.js  settings.json
.agent/modules/context-engineering/: module.yaml  stack-profile.yaml
.agent/modules/python-fastapi/: module.yaml  stack-profile.yaml
.agent/modules/python-kafka/: module.yaml  stack-profile.yaml
.agent/rules/: data-protection.md  workflow.md
.agent/skills/setup-ai-first/: SKILL.md
.agent/steps/: context-loader.md  gate.md  report-footer.md  spawn-agent.md
.claude/: settings.json
.claude/agents/: python-quality-guardian.md
.claude/commands/: review-quality.md  setup-ai-first.md
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  exceptions.py  logging.py
app/db/: __init__.py  session.py
app/db/migrations/: env.py
app/kafka/: consumer.py  producer.py  schemas.py
app/middleware/: request_logging.py
app/models/: __init__.py  events.py
app/prompts/: registry.py
app/repositories/: __init__.py  base.py  redis_client.py
app/repositories/cache/: __init__.py  redis_event_repository.py
app/repositories/nosql/: __init__.py  mongo_event_repository.py
app/repositories/sql/: __init__.py  (+1 more)
app/schemas/: base.py  events.py
app/services/: event_service.py  gemini_service.py  llm_base.py  openai_service.py
app/utils/: ids.py
docs/adr/: 0001-multi-backend-database-support.md
tests/: conftest.py
tests/integration/: test_api_health.py
tests/unit/: test_config.py  test_exceptions.py  test_kafka_producer.py  test_prompts.py  test_schemas.py
(+7 files in other folders)
